# pyinput

./: .gitignore  LICENSE.md  README.md  input.py  pyproject.toml  pytest.ini
tests/: test_setup.py
